--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "myitalianwordsapp",
   "version": "1.0.0",
-  "main": "main.js",
+  "main": "src/main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "electron ."
@@ -12,6 +12,12 @@
   "description": "",
   "dependencies": {
     "axios": "^1.8.1",
-    "electron": "^35.0.0"
+    "dotenv": "^16.4.7",
+    "firebase": "^11.4.0",
+    "firebase-admin": "^13.2.0"
+  },
+  "devDependencies": {
+    "electron": "^35.0.0",
+    "electron-builder": "^25.1.8"
   }
 }
